# unshape

./: CLAUDE.md  Cargo.toml  DECOMPOSITION-AUDIT.md  README.md  TODO.md  clippy.toml  flake.nix
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/resin-audio/: Cargo.toml  build.rs
crates/resin-audio-codegen/: Cargo.toml
crates/resin-audio-macros/: Cargo.toml
crates/resin-audio-macros/src/: lib.rs
crates/resin-automata/: Cargo.toml
crates/resin-bytes/: Cargo.toml
crates/resin-colonization/: Cargo.toml
crates/resin-color/: Cargo.toml
crates/resin-core/: Cargo.toml
crates/resin-core/src/: attributes.rs  color.rs  context.rs  easing.rs  error.rs  eval.rs  expr.rs  field.rs  graph.rs  image_field.rs  lib.rs  node.rs  noise.rs  optimize.rs  particle.rs  scatter.rs  spline.rs  spring.rs  value.rs  wfc.rs
crates/resin-crossdomain/: Cargo.toml
crates/resin-curve/: Cargo.toml
crates/resin-curve/src/: arc.rs  bezier.rs  lib.rs  line.rs  path.rs  segment.rs  traits.rs
crates/resin-easing/: Cargo.toml
crates/resin-easing/src/: lib.rs
crates/resin-expr-field/: Cargo.toml
crates/resin-expr-field/src/: lib.rs
crates/resin-geometry/: Cargo.toml
crates/resin-history/: Cargo.toml
crates/resin-history/src/: error.rs  event.rs  lib.rs  snapshot.rs
crates/resin-image/: Cargo.toml
crates/resin-image/src/: lib.rs
crates/resin-lsystem/: Cargo.toml
crates/resin-macros/: Cargo.toml
crates/resin-mesh/: Cargo.toml
crates/resin-motion-fn/: Cargo.toml
crates/resin-noise/: Cargo.toml
crates/resin-particle/: Cargo.toml
crates/resin-physics/: Cargo.toml
crates/resin-pointcloud/: Cargo.toml
crates/resin-pointcloud/src/: lib.rs
crates/resin-rd/: Cargo.toml
crates/resin-rig/: Cargo.toml
crates/resin-scatter/: Cargo.toml
crates/resin-serde/: Cargo.toml
crates/resin-serde/src/: bincode.rs  error.rs  json.rs  lib.rs  registry.rs  serial.rs
crates/resin-space-colonization/: Cargo.toml
crates/resin-spatial/: Cargo.toml
crates/resin-spline/: Cargo.toml
crates/resin-spring/: Cargo.toml
crates/resin-surface/: Cargo.toml
crates/resin-vector/: Cargo.toml
crates/resin-voxel/: Cargo.toml
crates/unshape-audio/: Cargo.toml  build.rs
crates/unshape-audio/benches/: effects.rs
crates/unshape-audio/src/: codegen.rs  effects.rs  envelope.rs  filter.rs  granular.rs  graph.rs  jit.rs  jit_impl.rs  lib.rs  midi.rs  optimize.rs  osc.rs  patch.rs  pattern.rs  percussion.rs  physical.rs  primitive.rs  room.rs  spatial.rs  spectral.rs  utility.rs  vocoder.rs  wav.rs
crates/unshape-audio/src/graph/: chain.rs  mixer.rs  mod.rs  nodes.rs  params.rs  swappable.rs  traits.rs
crates/unshape-audio/src/optimize/: effects.rs  engine.rs  mod.rs  passes.rs
crates/unshape-audio/src/vocoder/: feedback.rs
crates/unshape-core/: Cargo.toml
crates/unshape-core/src/: error.rs  eval.rs  graph.rs  lib.rs  node.rs  optimize.rs  value.rs
crates/unshape-core/src/nodes/: constant.rs  graph_input.rs  graph_output.rs  latch.rs  mod.rs
crates/unshape-crossdomain/: Cargo.toml
crates/unshape-crossdomain/src/: lib.rs
crates/unshape-editor/: Cargo.toml
crates/unshape-editor/src/: lib.rs  main.rs  render.rs
crates/unshape-field/: Cargo.toml
crates/unshape-field-ops/: Cargo.toml
crates/unshape-field-ops/src/: combinators.rs  lib.rs  output_ops.rs
crates/unshape-field/benches/: field_benches.rs
crates/unshape-field/src/: color_ramp.rs  combinators.rs  invariant_tests.rs  lib.rs  mesh_field.rs  primitives.rs  sdf.rs  terrain.rs  tests.rs  view_dependent.rs
crates/unshape-gpu/: Cargo.toml
crates/unshape-gpu/src/: backend.rs  context.rs  error.rs  image_expr.rs  image_ops.rs  kernels.rs  lib.rs  noise.rs  texture.rs
crates/unshape-history/: Cargo.toml
crates/unshape-history/src/: error.rs  event.rs  snapshot.rs
crates/unshape-image/: Cargo.toml
crates/unshape-image/src/: adjust.rs  bake.rs  channel.rs  colorspace.rs  composite.rs  distort.rs  dither.rs  effects.rs  expr.rs  freq.rs  glitch.rs  inpaint.rs  int_ops.rs  kernel.rs  lib.rs  normal_map.rs  optimizer.rs  pyramid.rs  transform.rs
crates/unshape-jit/: Cargo.toml
crates/unshape-jit/benches/: jit_bench.rs
crates/unshape-jit/src/: compiled.rs  compiler.rs  lib.rs  rust_codegen.rs
crates/unshape-motion/: Cargo.toml
crates/unshape-motion-fn/: Cargo.toml
crates/unshape-motion-fn/src/: lib.rs
crates/unshape-motion/src/: lib.rs
crates/unshape-op/: Cargo.toml
crates/unshape-op/src/: lib.rs
crates/unshape-particle/: Cargo.toml
crates/unshape-particle/src/: feedback.rs  lib.rs
crates/unshape-physics/: Cargo.toml
crates/unshape-physics/benches/: physics_benches.rs
crates/unshape-physics/src/: cloth.rs  feedback.rs  lib.rs  softbody.rs  world.rs
crates/unshape-rig/: Cargo.toml
crates/unshape-rig/src/: animation.rs  constraint.rs  ik.rs  lib.rs  locomotion.rs  morph.rs  motion_matching.rs  path3d.rs  secondary.rs  skeleton.rs  skin.rs  transform.rs
crates/unshape-serde/: Cargo.toml
crates/unshape-serde/src/: bincode.rs  error.rs  feedback_nodes.rs  format.rs  json.rs  lib.rs  registry.rs  serial.rs  typed_constants.rs
crates/unshape-space-colonization/: Cargo.toml
crates/unshape-space-colonization/src/: feedback.rs  lib.rs
crates/unshape-spring/: Cargo.toml
crates/unshape-spring/src/: feedback.rs  lib.rs
crates/unshape-vector/: Cargo.toml
crates/unshape-vector/src/: bezier.rs  boolean.rs  curve_impl.rs  delaunay.rs  geometry.rs  gradient_mesh.rs  hatching.rs  lib.rs  network.rs  path.rs  path_ops.rs  rasterize.rs  stroke.rs  svg.rs  text.rs
docs/: architecture-review.md  architecture.md  conventions.md  cross-domain-analysis.md  domain-differences.md  features.md  file-formats.md  getting-started.md  index.md  introduction.md  open-questions.md  ops-index.md  ops-reference.md  package.json  parity.md  philosophy.md  prior-art.md
examples/: audio_synthesis.rs  bevy_animation_demo.rs  bevy_mesh_demo.rs  compute_backends.rs  noise_texture.rs  pipeline_roundtrip.rs  procgen_lsystem.rs
tooling/: check-determinism.sh
(+278 files in other folders)
