[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rhi-zone/unshape"

[workspace.dependencies]
# Math (bevy-compatible)
glam = "0.29"

# Serialization
serde = { version = "1", features = ["derive"] }

# Error handling
thiserror = "2"

# Image loading
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }

# Float ordering for priority queues
ordered-float = "4"

# Random number generation
rand = "0.9"

# Proc macro support
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Benchmarking
criterion = "0.5"

# FFT for spectral analysis
rustfft = "6"

# JIT compilation (optional)
cranelift = { package = "cranelift-codegen", version = "0.113" }
cranelift-frontend = "0.113"
cranelift-native = "0.113"
cranelift-module = "0.113"
cranelift-jit = "0.113"

# Bevy (for examples) - no audio features to avoid ALSA dependency
bevy = { version = "0.15", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_winit",
    "bevy_sprite",
    "x11",
    "tonemapping_luts",
] }

# Resin crates
rhi-unshape-core = { path = "crates/unshape-core" }
rhi-unshape-backend = { path = "crates/unshape-backend" }
rhi-unshape-mesh = { path = "crates/unshape-mesh" }
rhi-unshape-audio = { path = "crates/unshape-audio" }
rhi-unshape-vector = { path = "crates/unshape-vector" }
rhi-unshape-rig = { path = "crates/unshape-rig" }
rhi-unshape-gltf = { path = "crates/unshape-gltf" }
rhi-unshape-fluid = { path = "crates/unshape-fluid" }
rhi-unshape-physics = { path = "crates/unshape-physics" }
rhi-unshape-noise = { path = "crates/unshape-noise" }
rhi-unshape-field = { path = "crates/unshape-field" }
rhi-unshape-image = { path = "crates/unshape-image" }
rhi-unshape-lsystem = { path = "crates/unshape-lsystem" }
rhi-unshape-op = { path = "crates/unshape-op" }
rhi-unshape-op-macros = { path = "crates/unshape-op-macros" }
rhi-unshape-motion-fn = { path = "crates/unshape-motion-fn" }
rhi-unshape-curve = { path = "crates/unshape-curve" }
rhi-unshape-audio-codegen = { path = "crates/unshape-audio-codegen" }
rhi-unshape-jit = { path = "crates/unshape-jit" }
rhi-unshape-gpu = { path = "crates/unshape-gpu" }
rhi-unshape-spectral = { path = "crates/unshape-spectral" }

[package]
name = "rhi-unshape-examples"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = []
dynop = [
    "rhi-unshape-mesh/dynop",
    "rhi-unshape-audio/dynop",
    "dep:rhi-unshape-op",
    "dep:serde_json",
]

[dependencies]
bevy = { workspace = true }
rhi-unshape-core = { workspace = true }
rhi-unshape-backend = { workspace = true }
rhi-unshape-mesh = { workspace = true }
rhi-unshape-audio = { workspace = true }
rhi-unshape-vector = { workspace = true }
rhi-unshape-rig = { workspace = true }
rhi-unshape-noise = { workspace = true }
rhi-unshape-field = { workspace = true }
rhi-unshape-image = { workspace = true }
rhi-unshape-lsystem = { workspace = true }
rhi-unshape-op = { workspace = true, optional = true }
glam = { workspace = true }
serde_json = { version = "1", optional = true }

[[example]]
name = "bevy_mesh_demo"
path = "examples/bevy_mesh_demo.rs"

[[example]]
name = "bevy_animation_demo"
path = "examples/bevy_animation_demo.rs"

[[example]]
name = "audio_synthesis"
path = "examples/audio_synthesis.rs"

[[example]]
name = "procgen_lsystem"
path = "examples/procgen_lsystem.rs"

[[example]]
name = "noise_texture"
path = "examples/noise_texture.rs"

[[example]]
name = "pipeline_roundtrip"
path = "examples/pipeline_roundtrip.rs"
required-features = ["dynop"]

[[example]]
name = "compute_backends"
path = "examples/compute_backends.rs"
