[package]
name = "rhizome-resin-audio-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc macros for static audio graph compilation"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
