[package]
name = "rhizome-resin-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for resin"

[features]
default = []
serde = ["dep:serde", "glam/serde"]

[dependencies]
glam.workspace = true
thiserror.workspace = true
rhizome-resin-macros = { path = "../resin-macros" }
serde = { version = "1", features = ["derive"], optional = true }
