[package]
name = "rhizome-resin-easing"
version = "0.1.0"
edition = "2024"
description = "Easing functions for animation and interpolation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/resin"

[features]
default = []
# Enable thorough statistical/invariant tests (slower, for CI)
invariant-tests = []

[dependencies]
glam.workspace = true
