[package]
name = "resin-expr-field"
version = "0.1.0"
edition = "2024"
description = "Bridge between expressions and fields"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/resin"

[dependencies]
glam.workspace = true
resin-expr = { path = "../resin-expr" }
resin-field = { path = "../resin-field" }
resin-noise = { path = "../resin-noise" }

[dev-dependencies]
resin-expr-std = { path = "../resin-expr-std" }
