[package]
name = "rhizome-resin-history"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "History tracking for resin graphs (snapshots and event sourcing)"

[dependencies]
rhizome-resin-core = { path = "../resin-core", features = ["serde"] }
rhizome-resin-serde = { path = "../resin-serde" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
