[package]
name = "rhizome-resin-pointcloud"
version = "0.1.0"
edition = "2024"
description = "Point cloud operations: sampling, filtering, normals, reconstruction"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/resin"

[dependencies]
glam.workspace = true
rand.workspace = true
rhizome-resin-mesh = { path = "../resin-mesh" }
rhizome-resin-field = { path = "../resin-field" }
