[package]
name = "rhizome-resin-serde"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Serialization for resin graphs"

[dependencies]
rhizome-resin-core = { path = "../resin-core", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2", features = ["serde"] }
thiserror.workspace = true
