[package]
name = "unshape-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for unshape"

[features]
default = []
# Enable thorough statistical/invariant tests (slower, for CI)
invariant-tests = []
serde = ["dep:serde"]
dynop = ["dep:unshape-op", "dep:serde_json", "serde"]
# Graph pattern matching and optimization
optimize = []
# Spectral analysis (FFT, STFT, time-stretch, pitch-shift)
spectral = ["dep:unshape-spectral"]
# Pure feedback-edge DynNode wrapper for the vocoder (recurrent graph integration).
feedback = ["spectral"]
# Experimental: JIT compilation for audio graphs
cranelift = ["dep:cranelift", "dep:cranelift-frontend", "dep:cranelift-native", "dep:cranelift-module", "dep:cranelift-jit", "dep:unshape-jit", "unshape-jit/cranelift"]
# Build-time codegen (requires serde)
codegen = ["dep:unshape-audio-codegen", "serde", "dep:serde_json"]
# Build-time codegen for benchmarks
codegen-bench = ["codegen"]

[dependencies]
unshape-core = { workspace = true }
unshape-expr-field = { workspace = true }
unshape-spectral = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
unshape-op = { workspace = true, optional = true }
unshape-audio-codegen = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }
thiserror.workspace = true

# JIT compilation (optional)
cranelift = { workspace = true, optional = true }
cranelift-frontend = { workspace = true, optional = true }
cranelift-native = { workspace = true, optional = true }
cranelift-module = { workspace = true, optional = true }
cranelift-jit = { workspace = true, optional = true }
unshape-jit = { workspace = true, optional = true }

[build-dependencies]
unshape-audio-codegen = { workspace = true }

[dev-dependencies]
criterion.workspace = true
rustfft.workspace = true

[[bench]]
name = "effects"
harness = false
