[package]
name = "rhi-unshape-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for unshape"

[features]
default = []
serde = ["dep:serde", "glam/serde"]

[dependencies]
glam.workspace = true
thiserror.workspace = true
rhi-unshape-macros = { path = "../unshape-macros" }
serde = { version = "1", features = ["derive"], optional = true }
