[package]
name = "unshape-crossdomain"
version = "0.1.0"
edition = "2024"
description = "Cross-domain data interpretation and conversion utilities"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhi-zone/unshape"

[features]
default = []
serde = ["dep:serde"]
dynop = ["dep:unshape-op", "dep:serde_json", "serde"]

[dependencies]
glam = { workspace = true }
unshape-audio = { workspace = true, features = ["spectral"] }
unshape-image = { workspace = true }
unshape-field = { workspace = true }
unshape-color = { workspace = true }
unshape-bytes = { workspace = true }
unshape-op = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }
