[package]
name = "unshape-editor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Projectional editor MVP: one live texture, two co-equal projections of an op stack"
publish = false

[dependencies]
unshape-gpu = { workspace = true, features = ["image-expr"] }
unshape-image = { workspace = true, features = ["wick", "serde"] }
wick-core = { version = "0.1.0", features = ["cond"] }
serde = { workspace = true }
eframe = "0.33"
