[package]
name = "unshape-field-ops"
version = "0.1.0"
edition = "2024"
description = "Field trait, combinators, and primitives for procedural graphics"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhi-zone/unshape"

[dependencies]
glam.workspace = true
unshape-easing = { path = "../unshape-easing" }
