[package]
name = "rhi-unshape-field"
version = "0.1.0"
edition = "2024"
description = "Field trait and combinators for procedural graphics"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/resin"

[features]
default = []
# Enable thorough statistical/invariant tests (slower, for CI)
invariant-tests = []
serde = ["dep:serde"]
dynop = ["dep:rhi-unshape-op", "dep:serde_json", "serde"]

[dependencies]
glam.workspace = true
rhi-unshape-noise = { path = "../unshape-noise" }
rhi-unshape-op = { path = "../unshape-op", optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "field_benches"
harness = false
