[package]
name = "unshape-field"
version = "0.1.0"
edition = "2024"
description = "Field trait and combinators for procedural graphics"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhi-zone/unshape"

[features]
default = []
# Enable thorough statistical/invariant tests (slower, for CI)
invariant-tests = []
serde = ["dep:serde", "glam/serde"]
dynop = ["dep:unshape-op", "dep:serde_json", "serde"]
mesh = ["dep:unshape-mesh"]

[dependencies]
glam.workspace = true
unshape-field-ops = { workspace = true }
unshape-noise = { workspace = true }
unshape-mesh = { workspace = true, optional = true }
unshape-op = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "field_benches"
harness = false
