[package]
name = "rhi-unshape-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for unshape fields"

[features]
serde = ["dep:serde"]
dynop = ["dep:rhi-unshape-op", "dep:serde_json", "serde"]
image-expr = ["dep:rhi-unshape-image", "dep:rhizome-dew-linalg"]

[dependencies]
glam = { workspace = true }
wgpu = "23"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.4"
thiserror = { workspace = true }
rhi-unshape-core = { workspace = true }
rhi-unshape-backend = { workspace = true }
rhi-unshape-op = { path = "../unshape-op", optional = true }
rhi-unshape-image = { path = "../unshape-image", features = ["wgsl"], optional = true }
rhizome-dew-linalg = { git = "https://github.com/rhizome-lab/dew", features = ["4d", "wgsl"], optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
image = "0.25"
