[package]
name = "unshape-history"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for unshape graphs (snapshots and event sourcing)"

[dependencies]
unshape-core = { workspace = true, features = ["serde"] }
unshape-serde = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
