[package]
name = "unshape-image"
version = "0.1.0"
edition = "2024"
description = "Image-based fields for texture sampling"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhi-zone/unshape"

[features]
default = []
# Enable thorough statistical/invariant tests (slower, for CI)
invariant-tests = []
serde = ["dep:serde", "unshape-color/serde"]
dynop = ["dep:unshape-op", "dep:serde_json", "serde"]
wick = ["dep:wick-core", "dep:wick-linalg", "dep:num-traits"]
cranelift = ["wick", "wick-linalg/cranelift"]
wgsl = ["wick", "wick-linalg/wgsl"]

[dependencies]
glam.workspace = true
image.workspace = true
unshape-color = { workspace = true }
unshape-field = { workspace = true }
unshape-spectral = { workspace = true }
unshape-op = { workspace = true, optional = true }
wick-core = { version = "0.1.0", features = ["cond"], optional = true }
wick-linalg = { version = "0.1.0", features = ["4d"], optional = true }
num-traits = { version = "0.2", optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }
thiserror.workspace = true
