[package]
name = "rhi-unshape-motion-fn"
version = "0.1.0"
edition = "2024"
description = "Motion functions for animation (spring, oscillate, wiggle)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/resin"

[features]
default = []
serde = ["dep:serde", "glam/serde"]
dew = ["dep:rhizome-dew-scalar", "dep:rhizome-dew-core"]

[dependencies]
glam.workspace = true
rhi-unshape-field = { path = "../unshape-field" }
rhi-unshape-easing = { path = "../unshape-easing" }
rhi-unshape-noise = { path = "../unshape-noise" }
serde = { workspace = true, optional = true }
rhizome-dew-scalar = { git = "https://github.com/rhizome-lab/dew", optional = true }
rhizome-dew-core = { git = "https://github.com/rhizome-lab/dew", optional = true }

[dev-dependencies]
serde_json = "1"
