[package]
name = "unshape-motion-fn"
version = "0.1.0"
edition = "2024"
description = "Motion functions for animation (spring, oscillate, wiggle)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhi-zone/unshape"

[features]
default = []
serde = ["dep:serde", "glam/serde"]
wick = ["dep:wick-scalar", "dep:wick-core"]

[dependencies]
glam.workspace = true
unshape-field = { path = "../unshape-field" }
unshape-easing = { path = "../unshape-easing" }
unshape-noise = { path = "../unshape-noise" }
serde = { workspace = true, optional = true }
wick-scalar = { version = "0.1.0", optional = true }
wick-core = { version = "0.1.0", optional = true }

[dev-dependencies]
serde_json = "1"
