[package]
name = "unshape-motion"
version = "0.1.0"
edition = "2024"
description = "2D motion graphics scene graph with transforms, layers, and hierarchy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhi-zone/unshape"

[features]
default = []
serde = ["dep:serde", "glam/serde", "unshape-color/serde"]

[dependencies]
glam.workspace = true
unshape-color = { workspace = true }
unshape-easing = { workspace = true }
unshape-motion-fn = { workspace = true }
unshape-noise = { workspace = true }
unshape-transform = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
serde_json = "1"
