[package]
name = "rhi-unshape-op"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for unshape pipelines"

[dependencies]
rhi-unshape-op-macros = { path = "../unshape-op-macros" }
serde = { workspace = true }
serde_json = "1"
thiserror.workspace = true
