[package]
name = "rhi-unshape-physics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for unshape"

[features]
default = []
serde = ["dep:serde", "glam/serde"]
dynop = ["dep:rhi-unshape-op", "dep:serde_json", "serde"]
invariant-tests = []

[dependencies]
glam = { workspace = true }
rhi-unshape-op = { path = "../unshape-op", optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "physics_benches"
harness = false
