[package]
name = "unshape-physics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for unshape"

[features]
default = []
serde = ["dep:serde", "glam/serde"]
dynop = ["dep:unshape-op", "dep:serde_json", "serde"]
# Pure feedback-edge DynNode wrappers (recurrent graph integration).
feedback = ["dep:unshape-core"]
invariant-tests = []

[dependencies]
glam = { workspace = true }
unshape-core = { workspace = true, optional = true }
unshape-op = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "physics_benches"
harness = false
