[package]
name = "unshape-serde"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for unshape graphs"

[dependencies]
unshape-core = { workspace = true, features = ["serde"] }
unshape-image = { workspace = true, features = ["serde"] }
unshape-mesh = { workspace = true, features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2", features = ["serde"] }
thiserror.workspace = true
