[package]
name = "unshape-serde"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for unshape graphs"

[features]
# Registration of recurrent (feedback) sim Step/Init nodes from the domain
# crates. Each pulls in its crate with the `feedback` + `serde` features.
rd-feedback = ["dep:unshape-rd"]
particle-feedback = ["dep:unshape-particle"]
fluid-feedback = ["dep:unshape-fluid"]
audio-feedback = ["dep:unshape-audio"]
automata-feedback = ["dep:unshape-automata"]
# Convenience: register every feedback node from all sim crates.
feedback-nodes = [
    "rd-feedback",
    "particle-feedback",
    "fluid-feedback",
    "audio-feedback",
    "automata-feedback",
]

[dependencies]
unshape-core = { workspace = true, features = ["serde"] }
unshape-image = { workspace = true, features = ["serde"] }
unshape-mesh = { workspace = true, features = ["serde"] }
unshape-rd = { workspace = true, features = ["feedback", "serde"], optional = true }
unshape-particle = { workspace = true, features = [
    "feedback",
    "serde",
], optional = true }
unshape-fluid = { workspace = true, features = [
    "feedback",
    "serde",
], optional = true }
unshape-audio = { workspace = true, features = [
    "feedback",
    "serde",
], optional = true }
unshape-automata = { workspace = true, features = [
    "feedback",
    "serde",
], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2", features = ["serde"] }
thiserror.workspace = true
