[package]
name = "rhi-unshape-vector"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for unshape"

[features]
default = []
serde = ["dep:serde", "glam/serde"]
dynop = ["dep:rhi-unshape-op", "dep:serde_json", "serde"]
invariant-tests = []

[dependencies]
glam.workspace = true
rhi-unshape-core = { path = "../unshape-core" }
rhi-unshape-color = { path = "../unshape-color" }
rhi-unshape-curve = { path = "../unshape-curve" }
rhi-unshape-op = { path = "../unshape-op", optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }
thiserror.workspace = true
ab_glyph = "0.2"
