[package]
name = "unshape-vector"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for unshape"

[features]
default = []
serde = ["dep:serde", "glam/serde"]
dynop = ["dep:unshape-op", "dep:serde_json", "serde"]
invariant-tests = []

[dependencies]
glam.workspace = true
unshape-core = { workspace = true }
unshape-color = { workspace = true }
unshape-curve = { workspace = true }
unshape-op = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }
thiserror.workspace = true
ab_glyph = "0.2"
